src/corelib/thread/qfutureinterface.h
@@ -6,6 +6,7 @@
 
 #include <QtCore/qmutex.h>
 #include <QtCore/qresultstore.h>
+#include <QtCore/qtcoreexports.h>
 #ifndef QT_NO_EXCEPTIONS
 #include <exception>
 #endif
@@ -40,9 +41,11 @@ template<class Function, class ResultType>
 class FailureHandler;
 #endif
 
+#if QT_CORE_REMOVED_SINCE(6, 10)
 void Q_CORE_EXPORT watchContinuationImpl(const QObject *context,
                                          QtPrivate::QSlotObjectBase *slotObj,
                                          QFutureInterfaceBase &fi);
+#endif // QT_CORE_REMOVED_SINCE(6, 10)
 }
 
 class Q_CORE_EXPORT QFutureInterfaceBase
@@ -182,8 +185,10 @@ private:
     friend class QtPrivate::FailureHandler;
 #endif
 
+#if QT_CORE_REMOVED_SINCE(6, 10)
     friend Q_CORE_EXPORT void QtPrivate::watchContinuationImpl(
             const QObject *context, QtPrivate::QSlotObjectBase *slotObj, QFutureInterfaceBase &fi);
+#endif // QT_CORE_REMOVED_SINCE(6, 10)
 
     template<class T>
     friend class QPromise;
@@ -197,9 +202,11 @@ protected:
         OnCanceled,
     };
 
+#if QT_CORE_REMOVED_SINCE(6, 10)
     void setContinuation(std::function<void(const QFutureInterfaceBase &)> func);
     void setContinuation(std::function<void(const QFutureInterfaceBase &)> func,
                          QFutureInterfaceBasePrivate *continuationFutureData);
+#endif // QT_CORE_REMOVED_SINCE(6, 10)
     void setContinuation(std::function<void(const QFutureInterfaceBase &)> func,
                          void *continuationFutureData, ContinuationType type);
     void setContinuation(const QObject *context, std::function<void()> func,
